--- a/css/estilos.css
+++ b/css/estilos.css
@@ -51,7 +51,10 @@ h2{
     padding: 20px;
     text-align: center;
 }
-
+/* 2(0) + 1 -> Arregla el 1
+   2(1) + 1 -> Arregla el 3
+   ...
+*/
 .lista-productos li:nth-child(2n+1){
     clear: both;
 }
